--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,9 @@
 <body>
     <nav class="flex items-center justify-center p-2 m-2">
         <a href="{{ url_for('index') }}" class="logo text-2xl font-bold">
-            NLP Finals Sentiment Analysis X Spam Detection X Profanity Filter XDDDD
+            NLP Finals Sentiment Analysis X Spam Detection X Toxic Words Filtering XDDDD
         </a>
     </nav>
+
 </body>
 </html>
